force-app/main/default/objects/Room__c/fields/Current_Viewer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Viewer_Last_Name__c</fullName>
    <formula>$User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Viewer Last Name</label>
    <type>Text</type>
</CustomField>