force-app/main/default/objects/Room__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>