force-app/main/default/objects/Room__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <description>Formula to compute the floor number of a room given the room number is &lt;3-character facility&gt;-&lt;floor number&gt;-&lt;room number&gt;. Set to a text value so that Einstein Analytics won&apos;t think it&apos;s a measure.</description>
    <formula>Facility__r.Name &amp; &quot;-&quot; &amp; MID(MID(Name,5,6),0,FIND(&quot;-&quot;,MID(Name,5,6))-1)</formula>
    <label>Floor</label>
    <type>Text</type>
</CustomField>