force-app/main/default/objects/Room__c/fields/GPBUDVM_Demo_Record__c.field-meta.xml
<CustomField>
    <fullName>GPBUDVM_Demo_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This record is related to the GPBU Visitor Management Demo Scenario.</description>
    <label>GPBUDVM Demo Record</label>
    <type>Checkbox</type>
</CustomField>