force-app/main/default/objects/Room__c/fields/Hand_Crafted_for_Demo_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Hand_Crafted_for_Demo_Scenario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the room has been hand-crafted for the demo. This can be used in the Demo Reset framework to identify hand-crafted cases that should not be deleted during a demo reset.</description>
    <label>Hand Crafted for Demo Scenario</label>
    <type>Checkbox</type>
</CustomField>