force-app/main/default/objects/Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closet</fullName>
            </value>
            <value>
                <fullName>Communal Space</fullName>
            </value>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Cubicle</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Lavatory</fullName>
            </value>
            <value>
                <fullName>Personal Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>