force-app/main/default/objects/Room__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Needs Cleaning</fullName>
            </value>
            <value>
                <fullName>Cleaning in Process</fullName>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>