force-app/main/default/objects/Room__c/recordTypes/Room.recordType-meta.xml
<RecordType>
    <fullName>Room</fullName>
    <active>true</active>
    <label>Room</label>
</RecordType>